apps/image-webapp/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-webapp
  labels:
    app.kubernetes.io/part-of: image-webapp
