apps/image-webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-webapp
  namespace: image-webapp
  labels:
    app.kubernetes.io/name: image-webapp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: image-webapp
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
