apps/image-webapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-webapp
  namespace: image-webapp
  labels:
    app.kubernetes.io/name: image-webapp
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "35m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: image.chocomin.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-webapp
                port:
                  name: http
